<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_index">感恩食Food 贊嘆食Food</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_0">商店街</string>
    <string name="menu_1">購物訂單</string>
    <string name="menu_2">賣家上架</string>
    <string name="menu_3">銷售訂單</string>
    <string name="comm_0">會員</string>
    <string name="comm_1">離開</string>
    <string name="title_activity_upload_page">UploadPage</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_cart_page">CartPage</string>
    <string name="title_activity_more_page">MorePage</string>
    <string name="title_activity_food_page">FoodPage</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_member_page">MemberPage</string>
    <!--<string name="action_settings">Settings</string>-->
</resources>
