<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/app_icon_commodity"
            android:title="@string/menu_0" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/app_icon_buycar"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/app_icon_launch"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/app_icon_find"
            android:title="@string/menu_3" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/comm_0"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/comm_1"/>
        </menu>
    </item>

</menu>
